## Process this file with automake to produce Makefile.in -*-Makefile-*-

# Generate this list with
# find . -type f -name '*.m4' -printf '%f\n'|sort |fmt |tr '\012' @ \
#   |sed 's/@$/%/;s/@/ \\@/g' |tr @% '\012\012'
EXTRA_DIST = \
bold.m4 fault.m4 getpagesize.m4 libtool.m4 mmap-anon.m4 \
sigaltstack-longjmp.m4 sigaltstack-siglongjmp.m4 sigaltstack.m4
